<resources>
    <string name="font_name_light">Nexa_Light.otf</string>
    <string name="font_name_bold">Nexa_Bold.otf</string>
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="start">GOT IT</string>
    <string name="sign_up">Register</string>
    <string name="register">Register</string>
    <string name="DTH">DTH</string>
    <string name="Gas">Gas</string>
    <string name="Flight">Flight</string>
    <string name="land_line">Land Line</string>
    <string name="pay_terms">I agree that Bank/UIDAI may share my details with each other for the purpose of authenticating my Aadhaar Number</string>
    <string name="hint_name">Full Name</string>
    <string name="hint_email">Email ID</string>
    <string name="recharge">Recharge &amp; Pay Bills</string>
    <string name="hint_amount">Amount </string>
    <string name="hint_really_exit">Really Exit </string>
    <string name="hint_are_you_sure">Are you sure really want to exit </string>
    <string name="hint_details">Enter Your Details </string>
    <string name="hint_mobil">Mobile Number.</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="Already_has_account_Login_here">Already have an account? Login here</string>
    <string name="balance">Balance Enquiry</string>
    <string name="slide_1_title">Hello PayU Mitra!</string>
    <string name="slide_1_desc">The easiest way to recharge of all utility!</string>
    <string name="planapi">View Plan</string>
    <string name="slide_2_title">Movie Tickets</string>
    <string name="slide_2_desc">Book movie tickets for your family and friends!</string>
    <string name="recharge_plan"> Recharge Plan </string>
    <string name="slide_3_title">Great Discounts</string>
    <string name="slide_3_desc">Best discounts on every single service we offer!</string>
    <string name="slide_4_title">World Travel</string>
    <string name="slide_4_desc">Book tickets of any transportation and travel the world!</string>
    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="action_settings">Logout</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_master">MasterActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_bottom_navigation">BottomNavigation</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_account">Account</string>
    <string name="title_offer">Offer</string>
    <string name="title_bank">Bank</string>
    <string name="title_notifications">Notifications</string>
    <string name="recharge_validity">Recharge Validity</string>
    <string name="recharge_talk">Recharge Talktime</string>
    <string name="recharge_value">Recharge Value</string>
    <string name="client_first">There is a well-known quote by "Mahatma Gandhi" that inspires and aids us in serving our clients, and it says ; "A client is the most critical guest on our premises. He is not dependent on us. We are dependent on him. He is not an interruption in our work. He is the reason for it. He is not one who has come from outside in our business. He is a part of it. We are not helping him out by serving him. He is helping us out by giving us a chance to do as such.</string>
    <string name="view_dispute">View Dispute</string>
    <string name="mobile">Mobile</string>
    <string name="loan">Loan</string>
    <string name="dth">DTH</string>
    <string name="postpaid">Postpaid</string>
    <string name="data_card">Data Card</string>
    <string name="electricity">Electricity</string>
    <string name="gas">Gas</string>
    <string name="insurance">Insurance</string>
    <string name="amount">Amount</string>
    <string name="operator">Select Operator</string>
    <string name="circle">Select Circle</string>
    <string name="tr_id">Transaction Id</string>
    <string name="recharge_type">Recharge Type</string>
    <string name="operator_">Operator</string>
    <string name="method">Method</string>
    <string name="ope_ref">Ope Ref</string>
    <string name="status">Status</string>
    <string name="date">Date and Time</string>
    <string name="account">Account</string>
    <string name="reference_no">Reference No.</string>
    <string name="req_date">Request Date</string>
    <string name="message">Message</string>
    <string name="action">Action</string>
    <string name="ben_code">Beneficiary Code</string>
    <string name="ben_name">Beneficiary Name</string>
    <string name="ben_acc">Beneficiary Account</string>
    <string name="mobile_wallet">Mobile/Wallet</string>
    <string name="time">Time</string>
    <string name="change_pwd">Change Password</string>
    <string name="support_center">Support Center</string>
    <string name="enter_c_pwd">Enter Current Password</string>
    <string name="update">Update</string>
    <string name="middle">Middle Name</string>
    <string name="dob">Date Of Birth</string>
    <string name="district">District</string>
    <string name="confirm_pwd">Confirm Password</string>
    <string name="new_pwd">New Password</string>
    <string name="current_pin">Enter Current Pin</string>
    <string name="new_pin">New Pin</string>
    <string name="name">Name</string>
    <string name="director_one">Name of director 1*</string>
    <string name="director_two">Name of director 2*</string>
    <string name="director_three">Name of director 3*</string>
    <string name="company">Company</string>
    <string name="user_name">User Name</string>
    <string name="email">Email</string>
    <string name="mobile_">Mobile</string>
    <string name="address">Address</string>
    <string name="pin">Pin Code</string>
    <string name="Dispute_dtl">Dispute Details</string>
    <string name="dis_cre_date">Dispute Date : </string>
    <string name="dispute_id">Dispute Id :</string>
    <string name="cancel">Cancel</string>
    <string name="enter_tr_id">Enter Transaction Id</string>
    <string name="enter_msg">Please enter message</string>
    <string name="firm_name">Firm Name :</string>
    <string name="ifsc_code_finder">Ifsc Code Finder</string>
    <string-array name="bank_name">
        <item>Select Bank</item>
        <item>CSP</item>
        <item>Bank BC</item>
        <item>Bank Mitra</item>
    </string-array>
    <string name="branch_name_city">Branch Name/City</string>
    <string name="search">Search</string>
    <string name="bank_list">Bank List</string>
    <string name="ifsc_code">IFSC</string>
    <string name="service">Type of Services *</string>
    <string name="nyc">NYC code *</string>
    <string name="atm_balance">MATM Wallet</string>
    <string name="persons_employe">Persons employed *</string>
    <string name="investment_employe">Investment *</string>
    <string name="dist_employe">District industry centre *</string>
    <string name="company_employe">company located in which district *</string>
    <string name="rural_employe">Specify Urban or Rural area *</string>
    <string name="buisness_employe">Nature of the business details *</string>
    <string name="branch_name">Branch Name</string>
    <string-array name="state">
        <item>Select state</item>
        <item>Andhra Pradesh</item>
        <item>Arunachal Pradesh</item>
        <item>Assam</item>
        <item>Bihar</item>
        <item>Chhattisgarh</item>
        <item>Goa</item>
        <item>Gujarat</item>
        <item>Haryana</item>
        <item>Himachal Pradesh</item>
        <item>Jharkhand</item>
        <item>Karnataka</item>
        <item>Kerala</item>
        <item>Madhya Pradesh</item>
        <item>Maharashtra</item>
        <item>Manipur</item>
        <item>Meghalaya</item>
        <item>Mizoram</item>
        <item>Nagaland</item>
        <item>Odisha</item>
        <item>Punjab</item>
        <item>Rajasthan</item>
        <item>Sikkim</item>
        <item>Tamil Nadu</item>
        <item>Telangana</item>
        <item>Tripura</item>
        <item>Uttar Pradesh</item>
        <item>Uttarakhand</item>
        <item>West Bengal</item>
    </string-array>
    <string name="bill_summary">Billing Summary</string>
    <string name="user">User</string>
    <string name="user_type">User Type :</string>
    <string name="tr_type">Transaction Type</string>
    <string name="paid_amount">Paid Amount</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="enter_acc_name">Enter Account Name</string>
    <string name="enter_acc_number">Enter Account Number</string>
    <string name="enter_message">Enter Message</string>
    <string name="login">SignIn</string>
    <string name="signin">LOGIN</string>
    <string name="cust_mob_num">Customer Mobile Number</string>
    <string name="submit">Submit</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="pin_code">Pin Code</string>
    <string name="enter_opt">Enter otp</string>
    <string name="ben_list">Beneficiary List</string>
    <string name="ben_add">Add Beneficiary</string>
    <string name="history">History</string>
    <string name="enter_ifsc">Enter IFSC Code</string>
    <string name="exit">Exit</string>
    <string name="remaining_limit">Remaining Limit : </string>
    <string name="nick_name">Nick Name</string>
    <string name="beneficiary_code">Beneficiary Code</string>
    <string name="acc_num">Account Number</string>
    <string name="branch">Bank Name &amp; Branch *</string>
    <string name="withdrawal_type">Withdrawal Type</string>
    <string name="type">Type</string>
    <string name="pan">Pan Number</string>
    <string name="category">Social category (Community- General/SC/ST/OBC) *</string>
    <string name="postalcompany">Full Postal Address For Company *</string>
    <string name="personal_add">Full Postal Address Personal *</string>
    <string-array name="constitution">
        <item>Select Status</item>
        <item>Proprietor</item>
        <item>Private</item>
        <item>LLP</item>
        <item>Partner</item>
    </string-array>
    <string name="comencement">  Date of Commencement *</string>
    <string name="partnership">  Partnership deed Date *</string>
    <string name="bank_detail">  Bank Details of the company of Personal *</string>
    <string name="district_company">District*</string>
    <string name="company_name">Company Name</string>
    <string name="delete">Delete</string>
    <string name="agent_tr_id">Agent Transaction Id</string>
    <string name="mr_tr_id">Mr Transaction Id</string>
    <string name="enter_mobile_no">Enter Mobile No</string>
    <string name="capture">Capture</string>
    <string name="select_bank_name">Please Select Bank Name</string>
    <string name="enter_aadhaar_number">Enter Aadhaar Number</string>
    <string name="select_tans_type">Please Select Transaction Type</string>
</resources>